--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.7-alpine
 
-COPY . /
-WORKDIR test-python
+COPY . /app
+WORKDIR /app
 RUN ls -la
 RUN pip install -r requirements.txt
+
 CMD [ "python", "python_tests.py" ]
