--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -3,6 +3,6 @@ FROM python:3.7-alpine
 COPY . /app
 WORKDIR /app
 RUN ls -la
-RUN pip install -r requirements.txt
+RUN pip install -r ./tests/requirements.txt
 
 CMD [ "python", "python_tests.py" ]
