--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.7-alpine
 COPY . /app
 WORKDIR /app
 RUN ls -la
-RUN pip install -r ./tests/requirements.txt
+RUN ls -la ./tests
+#RUN pip install -r ./tests/requirements.txt
 
-CMD [ "python", "python_tests.py" ]
+#CMD [ "python", "python_tests.py" ]
