--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.7-alpine
+RUN pip install pipenv
 
-COPY . /app
+COPY / /app
 WORKDIR /app
 RUN ls -la
-RUN ls -la ./tests
 #RUN pip install -r ./tests/requirements.txt
 
 #CMD [ "python", "python_tests.py" ]
