--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7-alpine
 RUN pip install pipenv
 
-COPY / /app
+COPY . /app
 WORKDIR /app
 RUN ls -la
 #RUN pip install -r ./tests/requirements.txt
