--- a/dockerfiles/DockerfileTesting
+++ b/dockerfiles/DockerfileTesting
@@ -4,4 +4,4 @@ RUN pip install pipenv
 COPY / /app
 WORKDIR /app
 RUN pip install -r ./tests/requirements.txt
-CMD [ "python", "./tests/python_tests.py" ]
+CMD [ "sleep", "60" ]
